<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_generated_textfield"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/generated_password"
            app:endIconDrawable="@drawable/ic_baseline_assignment_24"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_length_textfield"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/enter_password_length">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/default_lowercase"
            android:textColor="@android:color/holo_red_dark" />

        <CheckBox
            android:id="@+id/uppercase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/include_uppercase"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/numbers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/include_numbers"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/symbols"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/include_symbols"
            android:textSize="18sp" />

        <Button
            android:id="@+id/generate_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/generate_password" />

        <Button
            android:id="@+id/store_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_password" />

    </LinearLayout>

    <Button
        android:id="@+id/show_manager"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        android:text="@string/open_password_manager"
        app:strokeColor="@color/purple_500" />
</RelativeLayout>