<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/saved_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="240dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/saved_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="240dp"
                android:text="@string/password"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/copy_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@color/white"
                android:contentDescription="@string/copypassword"
                android:src="@drawable/ic_baseline_assignment_24" />

            <ImageButton
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:background="@color/white"
                android:contentDescription="@string/deletepassword"
                android:src="@drawable/ic_baseline_delete_forever_24" />
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>